--- a/_posts/2016-08-13-181830.markdown
+++ b/_posts/2016-08-13-181830.markdown
@@ -25,6 +25,11 @@ $$
 
 In the provided settings, Hodges' estimator is "super-efficient" in a sense that it is not only consistent in esitmation, but its asymptotic expected square error is also never worse than that of MLE; *i.e.*, under $$\theta\neq 0, $$ $$n^{1/2}(\widehat\theta^H_n-\theta)$$ converges to $$N(0,1)$$ in distribution, as $$n$$ tends to infinity, under $$\theta=0$$, $$n^{1/2}(\widehat\theta^H_n-\theta)$$ converges to a degenerate distribution of zero. In other words, it asymptotically outperforms MLE at $$\theta=0$$ and is not worse than MLE at $$\theta\neq 0$$. 
 
-  Although Hodges' estimator attains super-efficiency in some settings, [Le Cam (1953)](https://books.google.com/books/about/On_some_asymptotic_Properties_of_maximum.html?id=_SqVQwAACAAJ) 
+#### There is no free lunch!
+
+  Although Hodges' estimator attains super-efficiency in some settings, [Le Cam (1953)](https://books.google.com/books/about/On_some_asymptotic_Properties_of_maximum.html?id=_SqVQwAACAAJ) showed that MLE is optimal among regular estimators, which means that the asymptotic behavior of the estimator is smooth with respect to the parameter $$\theta$$. He also showed that the set of parameter $$\theta$$ where Hodges' estimator is more efficient than the MLE must have Lebesgue measure zero. 
+  
+  Moreover, [Leeb and Potscher (2008)](https://ideas.repec.org/p/cwl/cwldpp/1500.html) provided that any sparse estimator can have maximal risk diverging to infinity whenever the loss function is unbounded. In other words, sparse estimators compromise the risk near zero to take advantage of usefulness of sparsity. As the old word goes, *there is no free lunch*.
+   
 
  
