--- a/_posts/2016-07-04-170943.markdown
+++ b/_posts/2016-07-04-170943.markdown
@@ -13,7 +13,7 @@ He asked me why the use of priors with Gaussian tails hurts the optimal rate of 
 The basic idea is the following. Consider a simple model where $$y_i\mid \theta \overset{i.i.d.}{\sim}N(\theta,1)$$ for $$i=1,\dots,n$$. The naive choice of the prior can be $$\theta \sim N(0,\tau^2)$$. The resulting posterior mean is 
 
 $$
-E(\theta\mid y) = \frac{n}{n+\tau^2}\bar y,
+E(\theta\mid y) = \frac{n}{n+1/\tau^2}\bar y,
 $$ 
 
 where $$\bar y$$ is the sample mean. The $$L_2$$ risk can be expressed as
@@ -21,7 +21,7 @@ where $$\bar y$$ is the sample mean. The $$L_2$$ risk can be expressed as
 $$
 \begin{eqnarray*}
 E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& E_{\theta_0}[(\theta_0-\bar y)^2] + E_{\theta_0}[\{\bar y-E(\theta\mid y)\}^2]\\
-&=& \frac{1}{n} + \frac{\tau^4}{n(n+\tau^2)^2}+\frac{\tau^4\theta_0^2}{(n+\tau^2)^2}, 
+&=& \frac{1}{n} + \frac{\tau^4}{n(n+1/\tau^2)^2}+\frac{\tau^4\theta_0^2}{(n+1/\tau^2)^2}, 
 \end{eqnarray*}
 $$
 
