--- a/_posts/2016-07-04-170943.markdown
+++ b/_posts/2016-07-04-170943.markdown
@@ -21,7 +21,7 @@ where $$\bar y$$ is the sample mean. The $$L_2$$ risk can be expressed as
 $$
 \begin{eqnarray*}
 E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& E_{\theta_0}[(\theta_0-\bar y)^2] + E_{\theta_0}[\{\bar y-E(\theta\mid y)\}^2]\\
-&=& \frac{1}{n} + \frac{\tau^4}{n(n+1/\tau^2)^2}+\frac{\tau^4\theta_0^2}{(n+1/\tau^2)^2}, 
+&=& \frac{1}{n} + \frac{1/\tau^4}{n(n+1/\tau^2)^2}+\frac{1/\tau^4\theta_0^2}{(n+1/\tau^2)^2}, 
 \end{eqnarray*}
 $$
 
@@ -29,7 +29,7 @@ where $$\theta_0$$ is the true parameter that is involved in the data-generating
 
 $$
 \begin{eqnarray*}
-\sup_{\theta_0} E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& \frac{1}{n} + \frac{\tau^4}{n(n+1/\tau^2)^2}+\sup_{\theta_0}\left(\frac{\tau^4\theta_0^2}{(n+1/\tau^2)^2} \right)\\
+\sup_{\theta_0} E_{\theta_0}[\{\theta_0 - E(\theta\mid y)\}^2] &=& \frac{1}{n} + \frac{1/\tau^4}{n(n+1/\tau^2)^2}+\sup_{\theta_0}\left(\frac{1/\tau^4\theta_0^2}{(n+1/\tau^2)^2} \right)\\
 &=& \infty.
 \end{eqnarray*}
 $$
