--- a/_posts/2016-09-21-215658.markdown
+++ b/_posts/2016-09-21-215658.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "A Paper About Bayesian Variable Selection"
+title: "A Paper about Bayesian Variable Selection"
 tags: Bayesian model selection, screening
 comments: true
 ---
