--- a/_posts/2016-10-13-214932.markdown
+++ b/_posts/2016-10-13-214932.markdown
@@ -57,13 +57,13 @@ $$
 
 
 More specifically, 
-:: <math> \begin{eqnarray*}
+$$ \begin{eqnarray*}
 \pi(\theta) &\propto& \int \pi(\theta\mid \tau^2) \pi(\tau^2) d\tau\\
 &\propto&\int \exp\{-\theta^2/(2\tau^2) - \lambda \tau^2 \} d\tau\\
 &\propto&\exp\{  -(2\lambda)^{1/2}|\theta|)\}\\
 &\sim& Laplace\left((2\lambda)^{1/2}\right).
 \end{eqnarray*}
-</math>
+$$
 
 Hence, in the Gibbs sampling, first it samples $$ \tau^2 $$ from  the conditional posterior distribution given $$ \theta $$, then it generates a posterior sample 4 \theta $$ given $$ \tau^2 $$, and it is very esay, since  the posterior distribution of $$ \theta $$ given $$ \tau^2 $$ is conjugate. The mixing of the resulting Gibbs sampling is much more efficient than the naive version of the Bayesian LASSO.
 
