--- a/_posts/2016-10-13-214932.markdown
+++ b/_posts/2016-10-13-214932.markdown
@@ -71,5 +71,6 @@ Hence, in the Gibbs sampling, first it samples $$ \tau^2 $$ from  the conditiona
 
 In this section, I am going to talk about the bias of $ L_1 $ penalty and its interpretation in a Bayesian perspective.
 
+##### Figure (1)
 ![look at me3](/assets/blasso.png)
 
