--- a/_posts/2016-10-13-214932.markdown
+++ b/_posts/2016-10-13-214932.markdown
@@ -77,3 +77,39 @@ In this section, I am going to talk about the bias of $ L_1 $ penalty and its in
 ##### Figure (1) Penalty function of LASSO and prior dendisty of Bayesian LASSO.
 
 The above figure illustrates the  $$L_1 $$ penalty function and the corresponding Bayesian prior (Laplace distribution). The problem of  $$L_1 $$ penalty is that as  $$\theta $$ gets larger the penalty on  $$\theta $$  also becomes stronger, which means that even when the MLE of  $$\theta $$ is large enough not to be penalized, the  $$L_1 $$  penalized estimator shrinks towards zero. [http://orfe.princeton.edu/~jqfan/papers/01/penlike.pdf Fan and Li (2001)] defined this overshrinking property as the "bias" of a penalty function. In a Bayesian point of view, on the other hand, this bias is closely related to the tail behavior of the prior corresponding to the penalty of the penalized likelihood. The tail of the Laplace density decays exponentially, since the density function is proportional to  $$ \exp\{ - \lambda |\theta|\} $$ for some constant $$\lambda$$. When the model contains a large number of parameters and one expects strong sparsity on the parameters, it is required to choose a large $$\lambda$$, then the resulting Laplace prior has scarce density at the tail part. This tail behavior results in overshrinkage effects towards zero so that the resulting posterior distribution is not able to concentrate around the true parameter value in the optimal rate.
+
+### The Idea of Horseshoe Prior 
+ 
+In the previous section, I discussed that the light tail behavior of the Bayesian LASSO prior is problematic. To avoid such a overshrinking phenomenon, the shrinkage prior requires the two properties:
+
+* The prior density allocates a sufficiently large probability mass in a very small neighborhood of zero.
+* The prior density has heavy tails; e.g., polynomial tails.
+
+The Bayesian LASSO prior satisfies the first condition, but it fails to achieve the second one, since it has exponentially decaying tails. 
+
+[Carvalho and Scott (2010)](http://faculty.chicagobooth.edu/nicholas.polson/research/papers/Horse.pdf) proposed the HorseShoe (HS) prior that attains the above two properties. It follows as
+
+$$
+\begin{eqnarray*}
+\theta\mid \tau^2 &\sim& N(0,\tau^2)\\
+\tau &\sim& Cauchy^+,
+\end{eqnarray*}
+$$
+where $$  Cauchy^+ $$  is a standard half-Cauchy distributon. Then, the marginal prior density of $$ \theta $$  approximately can be shown  $$ \pi(\theta)\approx C_1\log (1+C_2/θ^2) $$ for some constants   $$ C_1 $$ and $$ C_2 $$. Also, one can show that <math>\log (1+C_2/θ^2)\asymp \theta^{-2}$$ when $$\theta $$ is large enough, which means that the marginal HS prior has Cauchy-like tails.
+
+The intuition of the HS prior can be explained by reparameterizing $$\omega = (1+\tau^2)^{-1}$$ as
+
+$$
+\begin{eqnarray*}
+E[\theta \mid y, \omega] &=& (1-\omega)\bar y + \omega \cdot 0\\ 
+\omega &\sim& Beta(1/2,1/2). 
+ \end{eqnarray*}
+$$
+The conditional posterior expectation of $$ \theta  $$ is a convex mixture between the MLE $$ \bar y $$ and zero, and the weight $$\omega $$ has the prior density $$ Beta(1/2,1/2) $$.
+
+![look](/assets/hs.png)
+
+The above figure illustrates the density function of <math>Beta(1/2,1/2)</math>. The density of <math>Beta(1/2,1/2)</math> assigns a large proportion of probability mass around zero and one, which results in  the posterior expectation of <math>\theta  </math> shrinking towards the $$\bar y  $$ or zero.
+
+
+
