--- a/_posts/2016-10-13-214932.markdown
+++ b/_posts/2016-10-13-214932.markdown
@@ -107,7 +107,7 @@ $$
 $$
 
 where $$  Cauchy^+ $$  is a standard half-Cauchy distributon. Then, the marginal prior density of $$ \theta $$  approximately can be shown  $$ \pi(\theta)\approx C_1\log (1+C_2/θ^2) $$ for some constants   $$ C_1 $$ and $$ C_2 $$. Also, one can show that $$\log (1+C_2/θ^2)\asymp \theta^{-2}$$ when $$\theta $$ is large enough, which means that the marginal HS prior has Cauchy-like tails. 
-Further, $$\lim_{\theta\to 0} C_1\log (1+C_2/θ^2) = \infty$$.
+Further, $$\lim_{\theta\to 0} \log (1+C_2/θ^2) = \infty$$.
 
 The intuition of the HS prior can be explained by reparameterizing $$\omega = (1+\tau^2)^{-1}$$ as
 
