--- a/_posts/2016-10-28-104711.markdown
+++ b/_posts/2016-10-28-104711.markdown
@@ -2,6 +2,7 @@
 layout: post
 title: "Simplified Shotgun Stochastic Search With Screening (S5)"
 date: 2016-10-27 20:41
+hidden: true
 ---
 
 I was writing a paper about [a high-dimensional Bayesian variable selection method](http://www.stat.tamu.edu/~minsuk/publications/nonlocal_sinica7.dpf).
