--- a/_posts/2016-10-28-104711.markdown
+++ b/_posts/2016-10-28-104711.markdown
@@ -5,5 +5,7 @@ date: 2016-10-27 20:41
 hidden: true
 ---
 
+### DRAFT
+
 I was writing a paper about [a high-dimensional Bayesian variable selection method](http://www.stat.tamu.edu/~minsuk/publications/nonlocal_sinica7.dpf).
 
